2000-05-19  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_new): There was
	a bug in the change to free method_string. This should fix it.
	
	* libgnomevfs/gnome-vfs.h: Fixed a FIXME.
	* test/gnome-file-selection/Makefile.am: Fixed a FIXME.

2000-05-19  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_new): Actually, now
	it looks like Rebecca's change had nothing to do with the problem
	I'm seeing, so I'm reverting my change.

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_new): Commented out
	Rebecca's memory leak fix for now; it looks correct to me but it
	must be triggering some other bug because it makes Nautilus do
	strange things for me and others.

2000-05-18  Rebecca Schulman <rebecka@eazel.com>
	
	* libgnomevfs/gnome-vfs-uri.c
	Fixed a memory leak in gnome_vfs_uri_new.  (method_string
	sometime was never freed)

2000-05-18  Maciej Stachowiak  <mjs@eazel.com>

	* data/mime/gnome-vfs-mime-magic: Replaced mime type of "X pixmap
	image text" to "image/x-xpm".

2000-05-17  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c:
	* libgnomevfs/gnome-vfs-uri.h:
	(gnome_vfs_uri_is_parent):
	Added a new utility call.
	
	* libgnomevfs/gnome-vfs-uri.c:
	(my_streq):
	Fixed it up to treat NULL and "" the same and cleaning it up.
	This fixes a bug in gnome_vfs_uri_equal making it fail on
	URIs that should have been evaluated as equal.

	* libgnomevfs/gnome-vfs-xfer.c:
	(move_items):
	Fix a bug where in some cases the error callback would get called
	without the names of the files it failed on.

2000-05-17  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys:
	Added application/x-asp

2000-05-16  Gene Z. Ragan  <gzr@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c:
	Reverted due to accidental check-in during last commit.

2000-05-16  Gene Z. Ragan  <gzr@eazel.com>

	* test/gnome-file-selection/main.c: #include
	"libgnomevfs/gnome-vfs.h", not "gnome-vfs.h".
